# plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
modules/: CMakeLists.txt
plugins/: CMakeLists.txt
scripts/: commit-nested.sh
